test/samples/invalid/interp/read_uninitialized_local.maruir
fun main()
locals a: u8, b: u8;
{
    entry:
        a := b + u8(1);
        return;
}
